--- a/style.scss
+++ b/style.scss
@@ -97,7 +97,7 @@ body.patrician {
 /* HERO */
 .p-hero-card {
 
-  background-image: url("../img/image-wrapper.png");
+  background-image: url("img/image-wrapper.png");
 
   background-size: cover;
   background-position: center;
