--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 
-$bg: #0b0b0c;
-$card: rgba(255, 255, 255, 0.035);
+$bg: #0e0e0f;
+$card:  linear-gradient(180deg, #0e0e0f 0%, #1c1c1d 100%);
 $card2: rgba(255, 255, 255, 0.025);
 $stroke: rgba(255, 255, 255, 0.08);
 
@@ -14,7 +14,7 @@ $radiusMd: 0px;
 $containerMax: 100%;
 
 @mixin glassCard($r) {
-  background: $card;
+
   border: 1px solid $stroke;
   border-radius: $r;
   overflow: hidden;
@@ -61,6 +61,12 @@ body.patrician {
   @include glassCard($radiusLg);
 }
 
+
+
+.p-card-end {
+  background: $card;
+}
+
 /* Карточка занимает весь экран минус паддинги секции */
 .p-card-fill {
   height: calc(var(--screen-h) - 0px);
@@ -68,6 +74,9 @@ body.patrician {
 
 .p-block {
   padding: 24px 120px 140px 120px;
+}
+.p-block-2 {
+  padding: 24px 193px 186px 193px;
 }
 
 .p-brand {
@@ -132,13 +141,14 @@ body.patrician {
 
 .p-hero-title {
   margin: 0 0 18px 0;
-  font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
+  font-family: "Playfair Display", ui-serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 120%;
   letter-spacing: 0.05em;
   text-align: center;
   color: #fffdfd;
+
 }
 .p-hero-note-subtitle {
   font-weight: 200;
@@ -207,17 +217,22 @@ body.patrician {
 .p-proof-col { padding: 8px 10px; }
 
 .p-side-title {
-  font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
-  font-size: 14px;
-  line-height: 18px;
-  color: rgba(255,255,255,0.78);
+  font-family: "Onest", ui-sans-serif;
   margin-bottom: 8px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 0.05em;
+  color: #fffdfd;
 }
 
 .p-side-text {
-  font-size: 11px;
-  line-height: 16px;
-  color: $muted2;
+
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 120%;
+  color: #868586;
+  padding-top: 12px;
 }
 
 
@@ -288,8 +303,11 @@ body.patrician {
 }
 
 /* FEATURES (DESKTOP) */
-.p-features-row { margin-top: 2px; }
-.p-feature-col { padding: 8px 10px; }
+.p-features-row { margin-top: 100px;
+justify-content: center}
+.p-feature-col { padding: 8px 10px;
+justify-content: center;
+display: flex}
 
 .p-feature {
   position: relative;
@@ -297,8 +315,9 @@ body.patrician {
 }
 
 .p-feature-media {
-  height: 220px;
-  border-radius: 22px;
+  width: 298px;
+  height: 313px;
+  border-radius: 24px;
 
   background-color: rgba(255,255,255,0.04);
   border: 1px solid rgba(255,255,255,0.06);
@@ -309,6 +328,8 @@ body.patrician {
   margin-bottom: 14px;
   position: relative;
   overflow: hidden;
+  border-top: none;
+  border-bottom: none;
 
   &::after {
     content: "";
@@ -318,6 +339,11 @@ body.patrician {
     pointer-events: none;
   }
 }
+.p-img {
+  width: 298px;
+  height: 313px;
+  border-radius: 24px;
+}
 
 /* заменить на реальные картинки */
 .p-media-1 { background-image: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.55)); }
@@ -325,17 +351,22 @@ body.patrician {
 .p-media-3 { background-image: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.55)); }
 
 .p-feature-title {
-  font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
-  font-size: 14px;
-  line-height: 18px;
-  color: rgba(255,255,255,0.78);
-  margin-bottom: 8px;
+  font-family: "Onest", ui-sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  text-align: left;
+  color: #fff;
+  margin-bottom: 24px;
+  margin-top: 24px;
 }
 
 .p-feature-text {
-  font-size: 11px;
-  line-height: 16px;
-  color: $muted2;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 120%;
+  color: #bcbcbc;
+  margin-top: 24px;
 }
 
 /* MOBILE single feature card */
@@ -369,28 +400,36 @@ body.patrician {
 
 .p-cta-kicker {
   position: relative;
-  font-size: 11px;
-  line-height: 14px;
-  color: $muted2;
   margin-bottom: 16px;
+  font-weight: 100;
+  font-size: 18px;
+  line-height: 120%;
+  text-align: center;
+  color: #dcdcdc;
+  margin-top: 20px;
 }
 
 .p-cta-title {
   position: relative;
-  margin: 0 0 10px 0;
-  font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  color: rgba(255,255,255,0.86);
+  margin: 98px 0 24px 0;
+  font-family: "Playfair Display", ui-serif;
+  font-weight: 400;
+   font-size: 36px;
+  line-height: 120%;
+  letter-spacing: 0.05em;
+  text-align: center;
+  color: #fffdfd;
 }
 
 .p-cta-quote {
   position: relative;
-  font-size: 11px;
-  line-height: 14px;
-  color: $muted2;
-  margin-bottom: 18px;
+
+  margin-bottom: 40px;
+  font-weight: 100;
+  font-size: 22px;
+  line-height: 120%;
+  text-align: center;
+  color: #797979;
 }
 
 .p-btn-cta {
@@ -400,35 +439,39 @@ body.patrician {
 
 .p-cta-links {
   position: relative;
-  display: inline-flex;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 12px;
+  margin-top: 98px;
+  margin-bottom: 40px;
 
   a {
-    font-size: 10px;
-    line-height: 12px;
-    color: rgba(255,255,255,0.42);
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    color: rgba(255, 253, 253, 0.5);
+
     text-decoration: none;
 
-    &:hover { color: rgba(255,255,255,0.60); }
+    &:hover {
+
+      color: rgba(255, 253, 253, 0.8); }
   }
 }
 
-.p-dot {
-  width: 3px;
-  height: 3px;
-  border-radius: 3px;
-  background: rgba(255,255,255,0.30);
-  display: inline-block;
-}
+
 
 .p-cta-copy {
   position: relative;
   margin-top: 10px;
-  font-size: 10px;
-  line-height: 12px;
-  color: rgba(255,255,255,0.34);
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 120%;
+  text-align: center;
+  color: #4c4c4c;
 }
 
 /* ===== MOBILE (desktop-first) ===== */
@@ -440,8 +483,10 @@ body.patrician {
   .p-block { padding: 22px 18px 22px 18px; }
 
   .p-hero-title {
+    font-family: "Playfair Display", ui-serif;
     font-size: 24px;
     line-height: 30px;
+
   }
 
   .p-phones { height: 330px; }
